# idea_depot

./: .gitignore  README.md
actor/: build.sh
actor/codec/: Cargo.toml
actor/codec/src/: error.rs  lib.rs
actor/impl/: Cargo.toml  manifest.yaml
actor/impl/src/: api.rs  dfn.rs  error.rs  lib.rs  types.rs
front-end/: .env.prod  .env.test  package-lock.json  package.json
front-end/src/layer2/: base.js
front-end/src/views/: AccountProfile.vue
state-actor/: build.sh
state-actor/codec/: Cargo.toml
state-actor/codec/src/: error.rs  lib.rs  txn.rs
state-actor/impl/: Cargo.toml  manifest.yaml
state-actor/impl/src/: account.rs  error.rs  lib.rs  sql.rs  tables.sql  txn.rs
